--- a/admin-dashboard/index.html
+++ b/admin-dashboard/index.html
@@ -61,7 +61,22 @@
         <h3 class="font-semibold">📊 Pipeline Status</h3>
         <button onclick="refreshPipelineStatus()" class="text-sm text-blue-400 hover:text-blue-300">Refresh</button>
       </div>
-      <div id="pipelineContent" class="text-sm text-gray-400">Loading...</div>
+      <div class="grid grid-cols-3 gap-4 mb-4">
+        <div class="bg-gray-700 rounded p-3">
+          <div class="text-lg font-bold text-blue-400"><span id="pipelineTranscripts">-</span></div>
+          <div class="text-xs text-gray-400">Transcripts (<span id="pipelineTranscriptPct">-</span>%)</div>
+        </div>
+        <div class="bg-gray-700 rounded p-3">
+          <div class="text-lg font-bold text-green-400"><span id="pipelineEmbeddings">-</span></div>
+          <div class="text-xs text-gray-400">Embeddings (<span id="pipelineEmbeddingPct">-</span>%)</div>
+        </div>
+        <div class="bg-gray-700 rounded p-3">
+          <div class="text-lg font-bold text-purple-400"><span id="pipelineChannels">-</span></div>
+          <div class="text-xs text-gray-400">Channels</div>
+        </div>
+      </div>
+      <div class="text-xs font-semibold text-gray-300 mb-2">Channel Progress:</div>
+      <div id="channelProgress" class="space-y-2 text-sm text-gray-400"></div>
     </div>
 
     <!-- Current Worker Activity -->
@@ -69,11 +84,25 @@
       <div class="flex justify-between items-center mb-3">
         <h3 class="font-semibold">⚙️ Worker Activity</h3>
         <span id="workerIndicator" class="flex items-center gap-2">
-          <span class="w-2 h-2 bg-gray-500 rounded-full"></span>
-          <span class="text-xs text-gray-400">Checking...</span>
+          <span id="workerDot" class="w-2 h-2 bg-gray-500 rounded-full"></span>
+          <span id="workerLabel" class="text-xs text-gray-400">Checking...</span>
         </span>
       </div>
-      <div id="workerContent" class="text-sm text-gray-400">Loading...</div>
+      <div class="grid grid-cols-3 gap-4 mb-3">
+        <div class="text-center">
+          <div class="text-lg font-bold text-green-400"><span id="workerProcessed">-</span></div>
+          <div class="text-xs text-gray-500">Processed</div>
+        </div>
+        <div class="text-center">
+          <div class="text-lg font-bold text-red-400"><span id="workerFailed">-</span></div>
+          <div class="text-xs text-gray-500">Failed</div>
+        </div>
+        <div class="text-center">
+          <div class="text-lg font-bold text-yellow-400"><span id="workerQueued">-</span></div>
+          <div class="text-xs text-gray-500">Queued</div>
+        </div>
+      </div>
+      <div id="currentJobs" class="text-sm text-gray-400"></div>
     </div>
 
     <!-- Tabs -->
@@ -1116,129 +1145,110 @@ ${data.without_embedding > 0 ? `\n⚠️ ${data.without_embedding} chunks need e
       }
     }
 
-    // Worker Status
+    // Worker Status - update values only, no HTML rebuild
     async function refreshWorkerStatus() {
-      const content = document.getElementById('workerContent');
-      const indicator = document.getElementById('workerIndicator');
-
       try {
         const res = await fetch(`${getApiUrl()}/admin/worker_status`, { headers: getHeaders() });
-        if (!res.ok) {
-          content.innerHTML = '<span class="text-red-400">Failed to load</span>';
-          return;
-        }
+        if (!res.ok) return;
 
         const data = await res.json();
-        const isActive = data.workers_count > 0;
+        const isActive = data.current_jobs && data.current_jobs.length > 0;
 
-        // Update indicator
-        indicator.innerHTML = isActive
-          ? `<span class="w-2 h-2 bg-green-500 rounded-full animate-pulse"></span><span class="text-xs text-green-400">${data.workers_count} active</span>`
-          : `<span class="w-2 h-2 bg-gray-500 rounded-full"></span><span class="text-xs text-gray-400">Idle</span>`;
+        // Update indicator (values only)
+        const dot = document.getElementById('workerDot');
+        const label = document.getElementById('workerLabel');
+        dot.className = isActive
+          ? 'w-2 h-2 bg-green-500 rounded-full animate-pulse'
+          : 'w-2 h-2 bg-gray-500 rounded-full';
+        label.className = isActive ? 'text-xs text-green-400' : 'text-xs text-gray-400';
+        label.textContent = isActive ? `${data.workers_count} active` : 'Idle';
 
-        // Build content
-        let html = `
-          <div class="grid grid-cols-3 gap-4 mb-3">
-            <div class="text-center">
-              <div class="text-lg font-bold text-green-400">${data.processed.toLocaleString()}</div>
-              <div class="text-xs text-gray-500">Processed</div>
-            </div>
-            <div class="text-center">
-              <div class="text-lg font-bold text-red-400">${data.failed}</div>
-              <div class="text-xs text-gray-500">Failed</div>
-            </div>
-            <div class="text-center">
-              <div class="text-lg font-bold text-yellow-400">${data.queues.reduce((a, q) => a + q.size, 0)}</div>
-              <div class="text-xs text-gray-500">Queued</div>
-            </div>
-          </div>
-        `;
+        // Update stats values only
+        document.getElementById('workerProcessed').textContent = data.processed.toLocaleString();
+        document.getElementById('workerFailed').textContent = data.failed.toLocaleString();
+        document.getElementById('workerQueued').textContent = data.queues.reduce((a, q) => a + q.size, 0);
 
+        // Only rebuild current jobs section (small, changes frequently)
+        const jobsContainer = document.getElementById('currentJobs');
         if (data.current_jobs && data.current_jobs.length > 0) {
-          html += `<div class="text-xs font-semibold text-gray-300 mb-2">Currently Processing:</div>`;
-          html += `<div class="space-y-1">`;
+          let html = `<div class="text-xs font-semibold text-gray-300 mb-2">Currently Processing:</div><div class="space-y-1">`;
           data.current_jobs.forEach(job => {
             const jobClass = job.class.replace('Job', '');
-            html += `
-              <div class="bg-gray-700 rounded px-3 py-2 flex items-center gap-2">
-                <span class="w-2 h-2 bg-green-500 rounded-full animate-pulse"></span>
-                <span class="text-yellow-400 font-mono text-xs">${jobClass}</span>
-                <span class="text-gray-400 text-xs truncate flex-1">${job.args ? JSON.stringify(job.args).slice(0, 50) : ''}</span>
-              </div>
-            `;
+            html += `<div class="bg-gray-700 rounded px-3 py-2 flex items-center gap-2">
+              <span class="w-2 h-2 bg-green-500 rounded-full animate-pulse"></span>
+              <span class="text-yellow-400 font-mono text-xs">${jobClass}</span>
+              <span class="text-gray-400 text-xs truncate flex-1">${job.args ? JSON.stringify(job.args).slice(0, 50) : ''}</span>
+            </div>`;
           });
           html += `</div>`;
+          jobsContainer.innerHTML = html;
         } else {
-          html += `<div class="text-gray-500 text-center py-2">No active jobs</div>`;
+          jobsContainer.innerHTML = `<div class="text-gray-500 text-center py-2">No active jobs</div>`;
         }
-
-        content.innerHTML = html;
-
       } catch (e) {
-        content.innerHTML = `<span class="text-red-400">Error: ${e.message}</span>`;
+        console.error('Worker status error:', e);
       }
     }
 
-    // Pipeline Status
+    // Pipeline Status - update values only, minimize DOM changes
+    let channelProgressInitialized = false;
+
     async function refreshPipelineStatus() {
-      const content = document.getElementById('pipelineContent');
-      content.innerHTML = '<span class="text-yellow-400">Loading...</span>';
-
       try {
-        // Fetch channel status
-        const channelRes = await fetch(`${getApiUrl()}/admin/channel_status`, { headers: getHeaders() });
-        const transcriptRes = await fetch(`${getApiUrl()}/admin/transcript_status`, { headers: getHeaders() });
-        const embeddingRes = await fetch(`${getApiUrl()}/admin/embedding_status`, { headers: getHeaders() });
+        // Fetch all statuses in parallel
+        const [channelRes, transcriptRes, embeddingRes] = await Promise.all([
+          fetch(`${getApiUrl()}/admin/channel_status`, { headers: getHeaders() }),
+          fetch(`${getApiUrl()}/admin/transcript_status`, { headers: getHeaders() }),
+          fetch(`${getApiUrl()}/admin/embedding_status`, { headers: getHeaders() })
+        ]);
 
-        if (!channelRes.ok || !transcriptRes.ok || !embeddingRes.ok) {
-          content.innerHTML = '<span class="text-red-400">Failed to load status</span>';
-          return;
-        }
+        if (!channelRes.ok || !transcriptRes.ok || !embeddingRes.ok) return;
 
         const channels = await channelRes.json();
         const transcript = await transcriptRes.json();
         const embedding = await embeddingRes.json();
 
-        // Build status HTML
-        let html = `
-          <div class="grid grid-cols-3 gap-4 mb-4">
-            <div class="bg-gray-700 rounded p-3">
-              <div class="text-lg font-bold text-blue-400">${transcript.with_transcript} / ${transcript.total}</div>
-              <div class="text-xs text-gray-400">Transcripts (${transcript.coverage_percent}%)</div>
-            </div>
-            <div class="bg-gray-700 rounded p-3">
-              <div class="text-lg font-bold text-green-400">${embedding.with_embedding} / ${embedding.total_chunks}</div>
-              <div class="text-xs text-gray-400">Embeddings (${embedding.coverage_percent}%)</div>
-            </div>
-            <div class="bg-gray-700 rounded p-3">
-              <div class="text-lg font-bold text-purple-400">${channels.total_channels}</div>
-              <div class="text-xs text-gray-400">Channels</div>
-            </div>
-          </div>
-          <div class="space-y-2">
-            <div class="text-xs font-semibold text-gray-300 mb-2">Channel Progress:</div>
-        `;
+        // Update summary values only
+        document.getElementById('pipelineTranscripts').textContent = `${transcript.with_transcript} / ${transcript.total}`;
+        document.getElementById('pipelineTranscriptPct').textContent = transcript.coverage_percent;
+        document.getElementById('pipelineEmbeddings').textContent = `${embedding.with_embedding} / ${embedding.total_chunks}`;
+        document.getElementById('pipelineEmbeddingPct').textContent = embedding.coverage_percent;
+        document.getElementById('pipelineChannels').textContent = channels.total_channels;
 
-        channels.channels.forEach(ch => {
-          const percent = ch.total_videos > 0 ? Math.round((ch.with_transcript / ch.total_videos) * 100) : 0;
-          const color = ch.language === 'en' ? 'bg-blue-500' : 'bg-green-500';
-          html += `
-            <div class="flex items-center gap-2">
-              <span class="w-32 text-xs truncate" title="${ch.name}">${ch.name}</span>
-              <span class="text-xs text-gray-500">${ch.language}</span>
-              <div class="flex-1 bg-gray-700 rounded-full h-2">
-                <div class="${color} h-2 rounded-full" style="width: ${percent}%"></div>
+        // Channel progress - initialize once, then update values only
+        const progressContainer = document.getElementById('channelProgress');
+
+        if (!channelProgressInitialized) {
+          // First time: create the structure
+          let html = '';
+          channels.channels.forEach((ch, i) => {
+            const percent = ch.total_videos > 0 ? Math.round((ch.with_transcript / ch.total_videos) * 100) : 0;
+            const color = ch.language === 'en' ? 'bg-blue-500' : 'bg-green-500';
+            html += `
+              <div class="flex items-center gap-2">
+                <span class="w-32 text-xs truncate" title="${ch.name}">${ch.name}</span>
+                <span class="text-xs text-gray-500">${ch.language}</span>
+                <div class="flex-1 bg-gray-700 rounded-full h-2">
+                  <div id="chBar${i}" class="${color} h-2 rounded-full transition-all duration-300" style="width: ${percent}%"></div>
+                </div>
+                <span id="chCount${i}" class="text-xs text-gray-400 w-20 text-right">${ch.with_transcript}/${ch.total_videos}</span>
               </div>
-              <span class="text-xs text-gray-400 w-20 text-right">${ch.with_transcript}/${ch.total_videos}</span>
-            </div>
-          `;
-        });
-
-        html += '</div>';
-        content.innerHTML = html;
-
+            `;
+          });
+          progressContainer.innerHTML = html;
+          channelProgressInitialized = true;
+        } else {
+          // Subsequent calls: update values only
+          channels.channels.forEach((ch, i) => {
+            const percent = ch.total_videos > 0 ? Math.round((ch.with_transcript / ch.total_videos) * 100) : 0;
+            const bar = document.getElementById(`chBar${i}`);
+            const count = document.getElementById(`chCount${i}`);
+            if (bar) bar.style.width = `${percent}%`;
+            if (count) count.textContent = `${ch.with_transcript}/${ch.total_videos}`;
+          });
+        }
       } catch (e) {
-        content.innerHTML = `<span class="text-red-400">Error: ${e.message}</span>`;
+        console.error('Pipeline status error:', e);
       }
     }
 
